use config.yml.sample instead

--- a/README.textile
+++ b/README.textile
@@ -1,14 +1,14 @@
 h2. Twitter Growl
 
-I just want to receive growl notifications when my friends update their twitter statuses and I don't want to install the memory hog that is Twitterific.
+I just want to receive Growl notifications when my friends update their Twitter statuses and I don't want to install the memory hog that is Twitterific.
 
 h2. Installation
 
 # Install "growlnotify":http://growl.info/extras.php#growlnotify from the Growl
   disk image
-# Edit the config.yml file and update it with your Twitter username and 
-  password
-# Add a cronjob:
+# Create a config.yml file based on config.yml.sample and update it with your
+  Twitter username and password
+# Add a cron job:
 
 <blockquote><pre><code>
   # twitter-growl
